--- a/shared/latex/en/tf-keras/tp-demo-tf.tex
+++ b/shared/latex/en/tf-keras/tp-demo-tf.tex
@@ -1,4 +1,4 @@
-\begin{frame}{Démonstration}
+\begin{frame}{Demonstration}
   \begin{center}
     \bluelink{https://colab.research.google.com/drive/1_IobKMATOGyIwf8O4nq5NIr22HsdkDox\#forceEdit=true&sandboxMode=true}{Réseau de neurones simple avec TensorFlow 2}
     (\bluelink{https://colab.research.google.com/drive/1qAvohjjhQpb7xLNmVxLwI1UBhC5KfSyQ\#forceEdit=true&sandboxMode=true}{version TP})
