--- a/shared/latex/en/tf-keras/tp-keras.tex
+++ b/shared/latex/en/tf-keras/tp-keras.tex
@@ -1,4 +1,4 @@
-\begin{frame}{Travaux pratiques}
+\begin{frame}{Practical exercises}
   \begin{center}
     \bluelink{https://colab.research.google.com/drive/1Eslst_uJnqijNVNSR654RzEHet7Lcrr_\#forceEdit=true&sandboxMode=true}{Instructions}
   \end{center}
