--- a/shared/latex/en/tf-keras/keras.tex
+++ b/shared/latex/en/tf-keras/keras.tex
@@ -5,21 +5,21 @@
 \end{frame}
 
 \begin{frame}{Pros --- Ease of use}
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \item Simple API
     \item Easy access to metrics, losses, models and optimizers
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Pros --- Modular}
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \item A network can be used as a layer: great modularity
     \item Configuration is easy
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Pros --- State of the art}
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \item Good models, losses, optimizers \& metrics are added quickly
     \item Fast reproduction of recent papers by the community
   \end{itemize}
@@ -27,7 +27,7 @@
 
 \begin{frame}{Pros --- Extensible}
   Easy to develop new:
-  \begin{itemize}[<+(1)->]
+  \begin{itemize}
     \item Layers
     \item Loss functions
     \item Evaluation metrics
