--- a/shared/latex/en/tf-keras/tp-tf.tex
+++ b/shared/latex/en/tf-keras/tp-tf.tex
@@ -1,3 +1,3 @@
-\begin{frame}{Travaux pratiques}
+\begin{frame}{Practical exercises}
   \bluelink{https://colab.research.google.com/drive/1qAvohjjhQpb7xLNmVxLwI1UBhC5KfSyQ\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
