--- a/shared/latex/tf-keras/keras.tex
+++ b/shared/latex/tf-keras/keras.tex
@@ -5,21 +5,21 @@
 \end{frame}
 
 \begin{frame}{Avantages --- Facile d'utilisation}
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \item Interface simple
     \item Accès facilité aux métriques d'évaluation
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Avantages --- Modulaire}
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \item Les réseaux se «~branchent~» facilement les uns avec les autres
     \item Tous les réseaux se configurent facilement
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Avantages --- État de l'art}
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \item Les modèles et optimiseurs pertinents sont rapidement ajoutés à Keras
     \item Reproduction facile de résultats récents
   \end{itemize}
@@ -27,7 +27,7 @@
 
 \begin{frame}{Avantages --- Extensible}
   Facile de développer de nouvelles :
-  \begin{itemize}[<+(1)->]
+  \begin{itemize}
     \item couches de réseau (Layers)
     \item fonctions de perte (Loss)
     \item métriques d'évaluation
