Small fixes in en/unsupervised
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/unsupervised/dimensionality-reduction/intro.tex
+++ b/shared/latex/en/unsupervised/dimensionality-reduction/intro.tex
@@ -1,4 +1,4 @@
-\begin{frame}{Problématique}
+\begin{frame}{Problem statement}
     \begin{center}
       How to apprehend high dimensional data?
     \end{center}
