--- a/shared/latex/en/unsupervised/dimensionality-reduction/tp.tex
+++ b/shared/latex/en/unsupervised/dimensionality-reduction/tp.tex
@@ -1,5 +1,5 @@
-\begin{frame}{Instructions --- Dimensionality reduction}
+\begin{frame}{Practical exercices}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1IidWHFuR3V0jY47UqY_Xl9qB-eBZ3jj6\#forceEdit=true&sandboxMode=true}{PCA on the dataset \texttt{wines}}
+    \bluelink{https://colab.research.google.com/drive/1IidWHFuR3V0jY47UqY_Xl9qB-eBZ3jj6\#forceEdit=true&sandboxMode=true}{PCA on the \texttt{wines} dataset}
   \end{center}
 \end{frame}
