--- a/shared/latex/en/unsupervised/dimensionality-reduction/tuto.tex
+++ b/shared/latex/en/unsupervised/dimensionality-reduction/tuto.tex
@@ -1,6 +1,6 @@
-\begin{frame}{Liens}
+\begin{frame}{Tutorials}
   \begin{itemize}
-    \item \bluelink{https://colab.research.google.com/drive/1n_97rd-P5Vo96QG5gFmbqqG1gRcxsehT\#forceEdit=true&sandboxMode=true}{PCA on the Iris dataset  --- Tutorial}
-    \item \bluelink{https://colab.research.google.com/drive/1ctaJCxSC-V94vJMJHsYsfoFag0sKQKiy\#forceEdit=true&sandboxMode=true}{PCA  \& LDA n the Iris dataset --- Tutorial}
+    \item \bluelink{https://colab.research.google.com/drive/1n_97rd-P5Vo96QG5gFmbqqG1gRcxsehT\#forceEdit=true&sandboxMode=true}{PCA on the Iris dataset}
+    \item \bluelink{https://colab.research.google.com/drive/1ctaJCxSC-V94vJMJHsYsfoFag0sKQKiy\#forceEdit=true&sandboxMode=true}{PCA  \& LDA on the Iris dataset}
   \end{itemize}
 \end{frame}
