--- a/shared/latex/en/nn/cnn/modern-architectures.tex
+++ b/shared/latex/en/nn/cnn/modern-architectures.tex
@@ -11,7 +11,7 @@
 \begin{frame}{AlexNet}
   \begin{columns}
     \begin{column}{0.5\textwidth}
-      \begin{itemize}[<+->]
+      \begin{itemize}
         \item First deep CNN trained on GPUs
         \item Introduced ReLU as a very good non-linearity to train deep networks
         \item Otherwise similar to LeNet --- only deeper
@@ -26,7 +26,7 @@
 \begin{frame}{VGG}
   \begin{columns}
     \begin{column}{0.45\textwidth}
-      \begin{itemize}[<+->]
+      \begin{itemize}
         \item Introduced the notion of architectural blocks in CNNs
         \item Otherwise similar to AlexNet --- only bigger \& deeper
         \item Was very popular as a fine-tuning base model
