--- a/shared/latex/en/nn/cnn/tp-demo.tex
+++ b/shared/latex/en/nn/cnn/tp-demo.tex
@@ -1,10 +1,10 @@
-\begin{frame}{Démonstration}
+\begin{frame}{Demonstration}
   \begin{itemize}
     \item
-      \bluelink{https://colab.research.google.com/drive/141PkJIc59QuaLTVar1LKQJklmyVZFHNZ\#forceEdit=true&sandboxMode=true}{CNNs avec Keras sur des données de paysage}
-      (\bluelink{https://colab.research.google.com/drive/1xLFNAWBJxmp0GBcRhmwKfZUbewBDq4hz\#forceEdit=true&sandboxMode=true}{version TP})
+      \bluelink{https://colab.research.google.com/drive/141PkJIc59QuaLTVar1LKQJklmyVZFHNZ\#forceEdit=true&sandboxMode=true}{CNNs with Keras on \texttt{landscape} data}
+      (\bluelink{https://colab.research.google.com/drive/1xLFNAWBJxmp0GBcRhmwKfZUbewBDq4hz\#forceEdit=true&sandboxMode=true}{TP version})
     \item
-      \bluelink{https://colab.research.google.com/drive/1tdOydMPsEYrjZEinP7MSSSFZFoDt0v83\#forceEdit=true&sandboxMode=true}{Segmentation d'images avec Keras}
-      (\bluelink{https://colab.research.google.com/drive/15LRfTSaKEOh9nZHohagnJyXnMzweJQkY\#forceEdit=true&sandboxMode=true}{version TP})
+      \bluelink{https://colab.research.google.com/drive/1tdOydMPsEYrjZEinP7MSSSFZFoDt0v83\#forceEdit=true&sandboxMode=true}{Image segmentation with Keras}
+      (\bluelink{https://colab.research.google.com/drive/15LRfTSaKEOh9nZHohagnJyXnMzweJQkY\#forceEdit=true&sandboxMode=true}{TP version})
   \end{itemize}
 \end{frame}
