--- a/shared/latex/en/nn/deep-optimize.tex
+++ b/shared/latex/en/nn/deep-optimize.tex
@@ -12,13 +12,13 @@
 \end{frame}
 
 \begin{frame}{Vanishing and exploding gradients}
-  \V{["tikz/optimization/vanishing-gradients", "tw", 1.0] | image}
+  \V{["tikz/optimization/vanishing-gradients", "tw", 1.0, "en"] | image}
 \end{frame}
 
 \begin{frame}{Vanishing gradient}
   Use ReLus instead of sigmoids
   \vfill
-  \V{["tikz/activations/relu", "tw", 1] | image}
+  \V{["tikz/activations/relu", "tw", 0.8, "en"] | image}
 \end{frame}
 
 \begin{frame}{Exploding gradients}
