--- a/shared/latex/en/nn/intro.tex
+++ b/shared/latex/en/nn/intro.tex
@@ -51,7 +51,7 @@
 
 \begin{frame}{A theoretically interesting model}
   \textbf{Kurt Hornik, 1991:} Universal approximation theorem
-  \V{["tikz/activations/approximation", "tw", 1] | image}
+  \V{["tikz/activations/approximation", "tw", 1, "en"] | image}
 
   \bluelink{https://youtu.be/5oEBiico-I4}{Visualization of the approximation process}
 \end{frame}
@@ -154,7 +154,7 @@
 
 \begin{frame}{Activation functions --- Sigmoid}
   \begin{center}
-    \V{["tikz/activations/sigmoid", "tw", 1] | image}
+    \V{["tikz/activations/sigmoid", "tw", 1, "en"] | image}
   \end{center}
 
   \begin{description}
@@ -165,7 +165,7 @@
 
 \begin{frame}{Activation functions --- Tanh}
   \begin{center}
-    \V{["tikz/activations/tanh", "tw", 1] | image}
+    \V{["tikz/activations/tanh", "th", 0.3, "en"] | image}
   \end{center}
 
   \begin{description}
@@ -176,7 +176,7 @@
 
 \begin{frame}{Activation functions--- ReLU}
   \begin{center}
-    \V{["tikz/activations/relu", "tw", 0.6] | image}
+    \V{["tikz/activations/relu", "th", 0.3, "en"] | image}
   \end{center}
 
   \begin{description}
@@ -187,7 +187,7 @@
 
 \begin{frame}{Activation functions --- Function approximation}
   \centering
-    \V{["tikz/activations/approximation", "tw", 1] | image}
+    \V{["tikz/activations/approximation", "tw", 0.8, "en"] | image}
   {\small
     \begin{align*}
       n_1 & = \ReLU(-5x - 7.7) & n_4 & = \ReLU(1.2x - 0.2) \\
