--- a/shared/latex/en/nn/optimize.tex
+++ b/shared/latex/en/nn/optimize.tex
@@ -1,7 +1,7 @@
 \begin{frame}{What are hyperparameters?}
   \begin{columns}
     \begin{column}[c]{0.5\textwidth}
-      \V{["tikz/neural-networks/deep-ff-notext", "tw", 1] | image}
+      \V{["tikz/neural-networks/deep-ff-notext", "tw", 1, "en"] | image}
     \end{column}
     \begin{column}[c]{0.5\textwidth}
       \begin{itemize}
