--- a/shared/latex/en/supervised/classification.tex
+++ b/shared/latex/en/supervised/classification.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Classification}
-  \V{["tikz/variables", "tw", 0.8] | image}
+  \V{["tikz/variables-en", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Classification}
