--- a/shared/latex/en/tf-keras/tf.tex
+++ b/shared/latex/en/tf-keras/tf.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Introduction}
-  \V{["img/logos/tensorflow", "th", 0.7] | image}
+  \V{["img/logos/tensorflow", "th", 0.7, "en"] | image}
 \end{frame}
 
 \begin{frame}{API structure}
@@ -62,7 +62,7 @@
 \end{frame}
 
 \begin{frame}{Computation graph}
-  \V{["tikz/tf-graph", "th", 0.8] | image}
+  \V{["tikz/tf-graph", "th", 0.8, "en"] | image}
 \end{frame}
 
 \begin{frame}{Computation graph}
