--- a/shared/latex/en/nn/cnn/data.tex
+++ b/shared/latex/en/nn/cnn/data.tex
@@ -1,11 +1,11 @@
 \begin{frame}{MNIST}
   810k handwritten digits
-  \V{["img/mnist", "th", 0.6] | image}
+  \V{["img/mnist", "th", 0.6, "en"] | image}
 \end{frame}
 
 \begin{frame}{Street View House Numbers}
   600k annotated house numbers
-  \V{["img/streetviewdataset", "th", 0.6] | image}
+  \V{["img/streetviewdataset", "th", 0.6, "en"] | image}
 \end{frame}
 
 \begin{frame}{ImageNet}
@@ -14,7 +14,7 @@
     \item 14M images (100M objective)
     \item 1M annotated
   \end{itemize}
-  \V{["img/imagenet", "th", 0.5] | image}
+  \V{["img/imagenet", "th", 0.5, "en"] | image}
 \end{frame}
 
 \begin{frame}{ImageNet 21k}
@@ -22,25 +22,41 @@
     \item 21 classes
     \item 14M images
   \end{itemize}
-  \V{["img/imagenet", "th", 0.5] | image}
+  \V{["img/imagenet", "th", 0.5, "en"] | image}
 \end{frame}
 
 \begin{frame}{MS-COCO}
    330k annotated and segmented images
-  \V{["img/ms-coco", "tw", 1] | image}
+  \V{["img/ms-coco", "tw", 1, "en"] | image}
 \end{frame}
 
 \begin{frame}{VisualQA}
   265k images, question answering
-  \V{["img/visual-qa", "th", 0.6] | image}
+  \V{["img/visual-qa", "th", 0.6, "en"] | image}
 \end{frame}
 
 \begin{frame}{Open Images}
   9M annotated images: 6000 classes
-  \V{["img/openimage", "th", 0.6] | image}
+  \V{["img/openimage", "th", 0.6, "en"] | image}
 \end{frame}
 
 \begin{frame}{MS-Celeb-1M}
   10M pictures of 100k celebrities
-  \V{["img/ms-celeb", "th", 0.6] | image}
+  \V{["img/ms-celeb", "th", 0.6, "en"] | image}
+\end{frame}
+
+\begin{frame}{Classification}
+  \V{["tikz/ml/vision/classification", "tw", 1.0, "en"] | image}
+\end{frame}
+
+\begin{frame}{Super-resolution}
+  \V{["tikz/ml/vision/super-resolution", "tw", 1.0, "en"] | image}
+\end{frame}
+
+\begin{frame}{Inpainting}
+  \V{["tikz/ml/vision/inpainting", "tw", 1.0, "en"] | image}
+\end{frame}
+
+\begin{frame}{Anomaly detection}
+  \V{["tikz/ml/vision/anomaly-detection", "tw", 1.0, "en"] | image}
 \end{frame}
