--- a/shared/latex/en/nn/cnn/help-pointers.tex
+++ b/shared/latex/en/nn/cnn/help-pointers.tex
@@ -1,4 +1,4 @@
 
-\begin{frame}{Ressources complémentaires}
-    \bluelink{https://keras.io/examples/vision/image_classification_with_vision_transformer/}{Image Transformer} 
+\begin{frame}{Additional resources}
+    \bluelink{https://keras.io/examples/vision/image_classification_with_vision_transformer/}{Image Transformer}
 \end{frame}
