--- a/shared/latex/en/nn/cnn/model.tex
+++ b/shared/latex/en/nn/cnn/model.tex
@@ -1,13 +1,13 @@
 \begin{frame}{Problem with MLPs for images}
   Say you want to detect objects in an image. A good model should:
-  \begin{itemize}[<+(1)->]
+  \begin{itemize}
     \item Find the object regardless of its location
     \item Use local data around the object to produce a decision, not the opposite side of the image
   \end{itemize}
 
-  \onslide<+(1)->{Standard MLPs don't meet those criteria.}
+  Standard MLPs don't meet those criteria.
 
-  \onslide<+(1)->{$\Rightarrow$ Convolutional neural networks do.}
+  $\Rightarrow$ Convolutional neural networks do.
 \end{frame}
 
 \begin{frame}{Convolution}
@@ -15,7 +15,7 @@
 
   It embodies both \textbf{locality} and \textbf{translation invariance}.
 
-  \V{["img/d2l/correlation", "tw", 0.8] | image}
+  \V{["img/d2l/correlation", "tw", 0.8, "en"] | image}
 \end{frame}
 
 \begin{frame}{Convolution on multiple channels}
@@ -23,15 +23,23 @@
 
   The convolution also has a channels and is applied to all channels:
 
-  \V{["img/d2l/conv-multi-in", "th", 0.3] | image}
+  \V{["img/d2l/conv-multi-in", "th", 0.3, "en"] | image}
 
   Usually the channel dimension is omitted when describing the convolution ($2 \times 2$ convolution instead of $2 \times 2 \times 2$).
+\end{frame}
+
+\begin{frame}{Convolution padding}
+  Padding controls the change in size due to the convolution operation by adding $0$s:
+
+  \V{["img/d2l/conv-pad", "th", 0.4, "en"] | image}
+
+  If we want a $3 \times 3$ output that matches our input, what can we do?
 \end{frame}
 
 \begin{frame}{Convolution stride}
   Convolution strides allow to reduce dimensionality in a convolutional network:
 
-  \V{["img/d2l/conv-stride", "th", 0.4] | image}
+  \V{["img/d2l/conv-stride", "th", 0.4, "en"] | image}
 
   Here the input went from $5 \times 5$ to $2 \times 2$ thanks to the $(3, 2)$ strides
 \end{frame}
@@ -39,17 +47,9 @@
 \begin{frame}{Pooling}
   Pooling is the other standard mechanism to reduce dimension:
 
-  \V{["img/d2l/pooling", "tw", 0.8] | image}
+  \V{["img/d2l/pooling", "tw", 0.8, "en"] | image}
 
   $n \times m$ pooling is often used with strides $(n, m)$.
-\end{frame}
-
-\begin{frame}{Convolution padding}
-  Padding controls the change in size due to the convolution operation by adding $0$s:
-
-  \V{["img/d2l/conv-pad", "th", 0.4] | image}
-
-  If we want a $3 \times 3$ output that matches our input, what can we do?
 \end{frame}
 
 \begin{frame}{Combination into a convolutional neural network}
@@ -67,16 +67,16 @@
 
   Less parameters but more operations: greatly benefits from GPUs.
 
-  \V{["img/gpus", "th", 0.4] | image}
+  \V{["img/gpus", "th", 0.4, "en"] | image}
 \end{frame}
 
 \begin{frame}{Visual cortex architecture}
   \begin{minipage}[l]{0.50\linewidth}
-    \V{["img/visual-cortex", "tw", 1.0] | image}
+    \V{["img/visual-cortex", "tw", 1.0, "en"] | image}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
     Layered connections:
-    \begin{description}[<+(1)->]
+    \begin{description}
     \item[V1] lines orientation
     \item[V2] shapes, sizes, colors
     \item[V3] motricity
@@ -87,5 +87,5 @@
 \end{frame}
 
 \begin{frame}{Demonstration}
-  \bluelink{https://www.cs.ryerson.ca/~aharley/vis/conv/}{Convolutional neural networks}
+  \bluelink{https://adamharley.com/nn_vis/cnn/3d.html}{Convolutional neural networks}
 \end{frame}
