--- a/shared/latex/en/nn/cnn/modern-anomaly-detection.tex
+++ b/shared/latex/en/nn/cnn/modern-anomaly-detection.tex
@@ -1,26 +1,26 @@
-\begin{frame}{Détection d'anomalie : Une méthode moderne}
+\begin{frame}{Anomaly detection --- A modern method}
     [2021] \textit{Vitjan Zavrtanik , Matej Kristan et Danijel Skcaj : \\Reconstruction by inpainting for visual anomaly detection.} 
 \end{frame}
 
-\begin{frame}{Etape 1 : Masquage}
+\begin{frame}{Step 1 --- Masking}
     \V{["tikz/neural-networks/cnn/inpainting-anomaly-detect-step1-mask", "th", 0.7] | image}
 \end{frame}
 
-\begin{frame}{Etape 2 : Prédiction des parties manquantes}
+\begin{frame}{Step 2 --- Masked areas prediction}
     \V{["tikz/neural-networks/cnn/inpainting-anomaly-detect-step2-autoencoder-predict", "tw", 1.0] | image}
 \end{frame}
 
-\begin{frame}{Etape 3 : Assemblage des parties prédites}
+\begin{frame}{Step 3 --- Assembling of predicted parts}
     \V{["tikz/neural-networks/cnn/inpainting-anomaly-detect-step3-assemble", "th", 0.7] | image}
 \end{frame}
   
-\begin{frame}{Etape 4 : Comparaison à l'original}
+\begin{frame}{Step 4 --- Comparing to the original}
     \V{["tikz/neural-networks/cnn/inpainting-anomaly-detect-step4-compare-input-output", "th", 0.8] | image}
 \end{frame}
   
-\begin{frame}{Détection d'anomalie : Une méthode moderne}
+\begin{frame}{Anomaly detection --- A modern method}
     \begin{center}
-        \bluelink{https://colab.research.google.com/drive/1QbpY8vfXb-yJQ3N-Amf-2pANyxlEYH_-\#forceEdit=true&sandboxMode=true}{Démo \og Reconstruction by inpainting for visual anomaly detection \fg}
+        \bluelink{https://colab.research.google.com/drive/1QbpY8vfXb-yJQ3N-Amf-2pANyxlEYH_-\#forceEdit=true&sandboxMode=true}{Demonstration of \textit{Reconstruction by inpainting for visual anomaly detection}}
     \end{center}
 \end{frame}
 
