--- a/shared/latex/en/nn/regularization.tex
+++ b/shared/latex/en/nn/regularization.tex
@@ -32,11 +32,11 @@
 \end{frame}
 
 \begin{frame}{Dropout}
-  \V{["tikz/neural-networks/dropout", "tw", 1] | image}
+  \V{["tikz/neural-networks/dropout", "tw", 1, "en"] | image}
 \end{frame}
 
 \begin{frame}{Multi-task learning}
-  \V{["img/multi-task-v2", "tw", 0.8] | image}
+  \V{["img/multi-task-v2", "tw", 0.8, "en"] | image}
 \end{frame}
 
 \begin{frame}{Complex regularizations}
