Traduction nlp partiellement et fin cnn et ae

--- a/shared/latex/en/nlp/ml-nlp.tex
+++ b/shared/latex/en/nlp/ml-nlp.tex
@@ -1,29 +1,28 @@
 \begin{frame}{Introduction}
-  Plusieurs noms~:
-  \begin{itemize}[<+->]
-    \item Traitement du texte
-    \item Traitement automatique des langues (TAL)
-    \item Traitement automatique du langage naturel (TALN)
+  Variety of names/fields:
+  \begin{itemize}
+    \item Text processing
     \item Natural Language Processing (NLP)
+    \item Natural Language Understanding (NLU)
+    \item Natural Language Generation (NLG)
   \end{itemize}
 
-  \onslide<+->{Utilisation du machine learning pour traiter des données textuelles.}
 \end{frame}
 
-\begin{frame}{Cas d'usage --- Classification}
+\begin{frame}{Use cases--- Classification}
   \begin{itemize}
-  \item auteur (gutenberg.org : 57k livres)
-  \item polarité/sentiment (Kaggle movie review : 222k commentaires rotten tomatoes)
-  \item reconnaissance d'entités nommées (Kaggle Annotated Corpus for NER : 1.3M tags)
-  \item thème/genre (gutenberg.org : 57k livres)
+  \item author (gutenberg.org : 57k books)
+  \item sentiments/polarity (Kaggle movie review : 222k rotten tomatoes comments)
+  \item Named-entity recognition (Kaggle Annotated Corpus for NER : 1.3M tags)
+  \item theme/genre (gutenberg.org : 57k livres)
   \item ...
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Cas d'usage --- Compréhension}
+\begin{frame}{Use case --- Understanding}
   \begin{itemize}
-  \item Question/réponses (SQUAD : 150k questions)
-  \item Traduction (europarl : 450k phrases alignées)
+  \item Questions/answers (SQUAD : 150k questions)
+  \item Translation (europarl : 450k aligned sentences)
   \item ...
   \end{itemize}
 \end{frame}
