--- a/shared/latex/en/nlp/usages-nlp.tex
+++ b/shared/latex/en/nlp/usages-nlp.tex
@@ -1,43 +1,43 @@
 
-\begin{frame}{Cas d'usage --- Transcription et synthèse de la parole}
+\begin{frame}{Use cases --- Transcription and synthesis of speech}
   \V{["img/smart-assistants", "tw", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Cas d'usage --- Identification du locuteur}
+\begin{frame}{Use cases --- Speaker identification}
   \V{["img/id-locuteur", "tw", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Cas d'usage --- Chatbot}
+\begin{frame}{Use cases --- Chatbot}
   \V{["img/zo", "tw", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Cas d'usage --- Moteur de recherche}
+\begin{frame}{Use cases --- Search engine}
   \V{["img/deep-moteur-recherche", "tw", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Cas d'usage --- Extraction de données}
+\begin{frame}{Use cases --- Data extraction}
   \V{["img/information-extraction", "tw", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Cas d'usage --- Analyse de sentiments}
+\begin{frame}{Use cases --- Sentiment analysis}
   \V{["img/sentiment-analysis", "tw", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Cas d'usage --- Résumé}
+\begin{frame}{Use cases --- Summary}
   \V{["img/auto-summary", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}{Cas d'usage --- Traduction}
+\begin{frame}{Use cases --- Translation}
   \begin{center}
     \V{["img/traduction-fr-en-short", "tw", 1.1] | image}
   \end{center}
 \end{frame}
 
-\begin{frame}{État de l'art --- Vers 2015}
+\begin{frame}{State of the art --- Around 2015}
   \V{["img/nlp-tech-resume", "tw", 1] | image}
 \end{frame}
 
-\begin{frame}{État de l'art --- 2019}
+\begin{frame}{State of the art --- 2019}
   \V{["img/nlp-tech-resume-2019", "tw", 1] | image}
 \end{frame}
 
