--- a/shared/latex/en/nn/ae/autoencoder.tex
+++ b/shared/latex/en/nn/ae/autoencoder.tex
@@ -18,6 +18,10 @@
   \V{["tikz/neural-networks/ae/denoiser", "tw", 1.1] | image}
 \end{frame}
 
+\begin{frame}{CNN Deep auto-encoder}
+  \V{["tikz/neural-networks/ae/deep-auto-encoder", "tw", 1] | image}
+\end{frame}
+
 \begin{frame}{Variational auto-encoder}
   \V{["tikz/neural-networks/ae/variational", "tw", 0.9] | image}
 \end{frame}
