--- a/shared/latex/en/nn/ae/tp.tex
+++ b/shared/latex/en/nn/ae/tp.tex
@@ -1,6 +1,6 @@
-\begin{frame}{Travaux pratiques}
+\begin{frame}{Exercices}
   \begin{enumerate}
-    \item \bluelink{https://colab.research.google.com/drive/1ALCyDov1v00Nk1qrIKDqWYNbHgG66L_M\#forceEdit=true&sandboxMode=true}{Instructions, auto-encodeurs simples}
-    \item \bluelink{https://colab.research.google.com/drive/1wLL0PVm8_bCwFsVUMSfqdPaQ1eFSfrwj\#forceEdit=true&sandboxMode=true}{Instructions, auto-encodeurs débruiteurs}
+    \item \bluelink{https://colab.research.google.com/drive/1ALCyDov1v00Nk1qrIKDqWYNbHgG66L_M\#forceEdit=true&sandboxMode=true}{Instructions, simple autoencoders}
+    \item \bluelink{https://colab.research.google.com/drive/1wLL0PVm8_bCwFsVUMSfqdPaQ1eFSfrwj\#forceEdit=true&sandboxMode=true}{Instructions, Denoising autoencoders}
   \end{enumerate}
 \end{frame}
