--- a/shared/latex/en/nn/cnn/task.tex
+++ b/shared/latex/en/nn/cnn/task.tex
@@ -10,10 +10,10 @@
     \V{["tikz/neural-networks/cnn/inpainting", "tw", 1.0] | image}
 \end{frame}
 
-\begin{frame}{Super résolution}
+\begin{frame}{Super sampling}
     \V{["tikz/neural-networks/cnn/super-resolution", "tw", 1.0] | image}
 \end{frame}
 
-\begin{frame}{Détection d'anomalie}
+\begin{frame}{Anomaly detection}
     \V{["tikz/neural-networks/cnn/anomaly-detection", "tw", 1.0] | image}
 \end{frame}
