--- a/shared/latex/nlp/preprocessing.tex
+++ b/shared/latex/nlp/preprocessing.tex
@@ -63,13 +63,13 @@
   \V{["img/dbpedia", "tw", 0.9] | image}
 \end{frame}
 
-\notmog{
+\fmg{
   \begin{frame}{Utilisation actuelle}
     \V{["img/chatbot", "tw", 0.9] | image}
   \end{frame}
 }
 
-\notmog{
+\fmg{
   \begin{frame}{Maintenabilité}
     \V{["img/usine-a-gaz", "tw", 0.9] | image}
   \end{frame}
