--- a/shared/latex/nn/ae/autoencoder.tex
+++ b/shared/latex/nn/ae/autoencoder.tex
@@ -7,17 +7,18 @@
   \V{["img/pca-nuage", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Cas linéaire}
-  \V{["tikz/neural-networks/ae/deep-auto-encoder", "tw", 1] | image}
-\end{frame}
-
 \begin{frame}{Auto-encodeurs profonds}
   Aussi appelées auto-encodeurs empilés.
   \V{["tikz/neural-networks/ae/autoencoder-stacked", "tw", 1] | image}
 \end{frame}
 
+
 \begin{frame}{Auto-encodeurs débruiteurs}
   \V{["tikz/neural-networks/ae/denoiser", "tw", 1] | image}
+\end{frame}
+
+\begin{frame}{CNN Auto-encodeurs profonds}
+  \V{["tikz/neural-networks/ae/deep-auto-encoder", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Auto-encodeurs variationnels}
