--- a/shared/latex/en/nlp/tf-idf.tex
+++ b/shared/latex/en/nlp/tf-idf.tex
@@ -1,50 +1,50 @@
 \begin{frame}
   \frametitle{TF-IDF}
-  Un document = un vecteur de la taille d'un dictionnaire. (donc à dimension fixe) \\
+  One document = one vector of the size of a dictionary. (thus with fixed dimension) \\
   \begin{center}
     $\boxed{w_{ij} = tf_{ij}\log{\frac{N}{df_i}}}$
   \end{center}
-  où :
+  where :
 
-  \begin{description}[<+->]
-    \item[$tf_{ij}$] Nombre d'occurrences du mot $i$ dans le document $j$
-    \item[$df_i$] Nombre de documents contenant le mot $i$
-    \item[$N$] Nombre total de documents
+  \begin{description}
+    \item[$tf_{ij}$] Number of occurrences of the word $i$ in the document $j$
+    \item[$df_i$] Number of documents containing the word $i$
+    \item[$N$] Total number of documents
   \end{description}
-  \onslide<+->{$\Rightarrow$ Produit scalaire, SVM, arbres, réseaux de neurones, …}
+  $\Rightarrow$ Scalar product, SVM, trees, neural networks, ...
 \end{frame}
 
-\begin{frame}{TF-IDF --- Intérêt de $df_i$}
-  Loi de Zipf, justifiant l'utilisation du terme $df_i$
+\begin{frame}{TF-IDF --- Why $df_i$?}
+  Zipf's law, justifying the use of the term $df_i$.
   \V{["img/zipf-law", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{TF-IDF}
-  Utilisation de $n$-grammes de mots ou de caractères.
+  Use $n$-grams of words or characters.
   \begin{center}
-  Exemple~: «~Le chien mange de la viande~»
+  Example: "The dog eats meat"
   \end{center}
 
-  Bigrammes de mots~:
+  Word bigrams:
 
   \begin{itemize}
-  \item le-chien, chien-mange, mange-de, de-la, la-viande
+  \item the-dog, dog-eats, eats-meat
   \end{itemize}
 
   Trigrammes de caractères~:
 
   \begin{itemize}
-  \item le\_, e\_c, \_ch, chi, hie, ien, en\_, n\_m, \_ma, man, …
+  \item the, \_do, dog, og\_, g\_e, \_ea, eat, ats, ts\_, s\_m, …
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Analyse sémantique latente}
-  Famille algorithmique des modèles thématiques (topic models)~:
+\begin{frame}{Latent semantic analysis}
+  Algorithmic family of topic models:
 
-  \begin{itemize}[<+(1)->]
-    \item $\approx$ PCA sur la matrice des documents $\rightarrow$ relations entre les mots
-    \item Composantes principales $\approx$ topics
+  \begin{itemize}
+    \item $\approx$ PCA on the matrix of documents $\rightarrow$ relations between words
+    \item Principal components $\approx$ topics
   \end{itemize}
 
-  \onslide<+(1)->{Par exemple~: un axe correspond au champ lexical du sport, un autre à celui de l'économie, etc.}
+  For example: one axis corresponds to the sport lexical field, another might be economy, etc.
 \end{frame}
