--- a/shared/latex/en/nn/cnn/demo-task.tex
+++ b/shared/latex/en/nn/cnn/demo-task.tex
@@ -1,8 +1,8 @@
-\begin{frame}{Démonstration}
+\begin{frame}{Demonstration}
   \centering
   \begin{itemize}
     \item \bluelink{https://reiinakano.com/arbitrary-image-stylization-tfjs/}{Styling}
-    \item \bluelink{https://github.com/jiny2001/dcscn-super-resolution}{Super-résolution}
-    \item \bluelink{https://richzhang.github.io/colorization/}{Colorisation}
+    \item \bluelink{https://github.com/jiny2001/dcscn-super-resolution}{Super sampling}
+    \item \bluelink{https://richzhang.github.io/colorization/}{Colorization}
   \end{itemize}
 \end{frame}
