--- a/shared/latex/en/nn/transformer/vision-demo.tex
+++ b/shared/latex/en/nn/transformer/vision-demo.tex
@@ -1,7 +1,7 @@
 \begin{frame}{Démonstration}
   \begin{itemize}
     \item
-      \bluelink{https://colab.research.google.com/drive/141PkJIc59QuaLTVar1LKQJklmyVZFHNZ\#forceEdit=true&sandboxMode=true}{CNNs avec Keras sur des données de paysage}
+      \bluelink{https://colab.research.google.com/drive/141PkJIc59QuaLTVar1LKQJklmyVZFHNZ\#forceEdit=true&sandboxMode=true}{Landscape classification using CNN and transformer}
       (\bluelink{https://colab.research.google.com/drive/1xLFNAWBJxmp0GBcRhmwKfZUbewBDq4hz\#forceEdit=true&sandboxMode=true}{version TP})
   \end{itemize}
 \end{frame}
