--- a/shared/latex/en/nn/rnn/lstm.tex
+++ b/shared/latex/en/nn/rnn/lstm.tex
@@ -12,13 +12,17 @@
 \end{frame}
 
 \begin{frame}{Theoretical details}
-  \V{["tikz/neural-networks/rnn/lstm-en", "th", 0.45] | image}
-  \begin{description}
-  \item[Forget gate] $F_t = \sigma(W_F \times x_t + U_F \times h_{t - 1} + b_F)$ 
-  \item[Input gate] $I_t = \sigma(W_I \times x_t + U_I \times h_{t - 1} + b_I)$
-  \item[Output gate] $O_t = \sigma(W_O \times x_{t} + U_O \times h_{t - 1} + b_O)$
-  \item[Memory update] $c_t = F_t \circ c_{t - 1} + I_t \circ \tanh(W_c \times x_t + U_c \times h_{t-1} + b_c)$
-  \item[Output] $h_t = O_t \circ \tanh(c_t)$
-  \item[Transformed output] $o_t = f(W_o \times h_t + b_o)$
-  \end{description}
+  \V{["tikz/neural-networks/rnn/lstm", "th", 0.37] | image} 
+  \begin{tabular}{ lrll } 
+    Forget gate & $F_t=$ & $\sigma(W_F \times x_t + U_F \times h_{t - 1} + b_F)$ & $\in[0;1]$ \\
+    Input gate & $I_t=$ &  $\sigma(W_I \times x_t + U_I \times h_{t - 1} + b_I)$ & $\in[0;1]$ \\
+    Output gate & $O_t=$ & $\sigma(W_O \times x_{t} + U_O \times h_{t - 1} + b_O)$ & $\in[0;1]$ \\
+  \end{tabular}
+  \begin{tabular}{ ll } 
+    \hline
+    Accumulateur & $\boldsymbol{c_t = F_t \times c_{t - 1} + I_t \times \tanh(W_c \times x_t + U_c \times h_{t-1} + b_c)}$ \\
+    \hline
+    Hidden & $h_t = O_t \times \tanh(c_t)$ \\
+    Output & $o_t = f(W_o \times h_t + b_o)$ \\
+  \end{tabular}
 \end{frame}
