--- a/shared/latex/en/sequential-data/sequential-models.tex
+++ b/shared/latex/en/sequential-data/sequential-models.tex
@@ -1,70 +1,68 @@
-\begin{frame}{Tâches variées}
-  \begin{itemize}[<+->]
-    \item Prédiction d'une classe
-    \item Prédiction de la suite d'une séquence (one step)
-    \item Prédiction de la suite d'une séquence (multi step)
-    \item Génération de séquence
-    \item Découverte de patterns
+\begin{frame}{Various tasks}
+  \begin{itemize}
+    \item Classification
+    \item Prediction of the continuation of a sequence (one step)
+    \item Prediction of the continuation of a sequence (multi step)
+    \item Sequence generation
+    \item Pattern discovery
     \item Clustering
-    \item Détection d'anomalies
+    \item Anomaly detection
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Tâches --- Prédiction d'une classe}
+\begin{frame}{Tasks --- Classification}
   input : $x_i=(1,6,8,4)$
 
-  output : positif ou négatif (cas binaire)
+  output : positive or négative (binary case)
 
   \begin{itemize}
-    \item Son (chant d'oiseau, personne, genre musical, …)
-    \item Vidéos (film, documentaire, stand up, …)
+    \item Sound (bird song, person, musical genre, ...)
+    \item Videos (film, documentary, stand up, ...)
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Tâches --- Prédiction de la suite d'une séquence (one step)}
+\begin{frame}{Tasks --- Prediction of the continuation of a sequence (one step)}
   input : $x_i=(1,2,3,4,5)$
 
   output : 6
 
   \begin{itemize}
-    \item Données Économiques
-    \item Comportement Clients
-    \item Météo
-    \item Modèle de Langage
+    \item Economic Data
+    \item Customer Behavior
+    \item Weather
+    \item Language Model
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Tâches --- Prédiction de la suite d'une séquence (multi step)}
+\begin{frame}{Tasks --- Prediction of the continuation of a sequence (multi step)}
   input : $x_i=(1,2,3,4,5)$
 
   output : (6, 7, 8)
 
   \begin{itemize}
-    \item Traduction automatique
-    \item Données Économiques
-    \item Météo
+    \item Automatic Translation
+    \item Economic Data
+    \item Weather
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Tâches --- Génération}
+\begin{frame}{Tasks --- Sequence generation}
   input : $x_1=(1,3,5),x_2=(7,9,11)$
 
   output : $(5,7,9)$
 
-  Quasi toujours conditionnée.
-
   \begin{itemize}
-    \item Texte
-    \item Texte vers voix
-    \item Voix vers texte
-    \item Génération de partitions
+    \item Text
+    \item Text to speech
+    \item Speech to text
+    \item Music scores generation
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Tâches --- Découverte de Patterns}
+\begin{frame}{Tasks --- Pattern discovery}
   \begin{itemize}
-    \item Découverte de gènes
-    \item Compression de signal
-    \item Décrire et comprendre des phénomènes
+    \item Gene Discovery
+    \item Signal compression
+    \item Describe and understand phenomena
   \end{itemize}
 \end{frame}
