--- a/shared/latex/nn/rnn/variants.tex
+++ b/shared/latex/nn/rnn/variants.tex
@@ -33,7 +33,7 @@
   \end{itemize}
 \end{frame}
 
-\notmog{
+\fmg{
   \begin{frame}{D'autres variantes}
     \V{["img/spaghetti", "tw", 1] | image}
   \end{frame}
